--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yajl (2.1.0-3+deb12u2pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Tue, 25 Jul 2023 11:54:00 +0000
+
 yajl (2.1.0-3+deb12u2) bookworm; urgency=medium
 
   [Tobias Frost]
