--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yajl (2.1.0-3+deb12u2pexip3) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:59:02 +0000
+
 yajl (2.1.0-3+deb12u2pexip2) pexip-bookworm; urgency=medium
 
   * Rebuild for bookworm.
