New versioning scheme

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yajl (2.1.0-3+deb12u2+pexip24u4) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:39:10 +0000
+
 yajl (2.1.0-3+deb12u2pexip3) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
